Fixed overflow bug where page expanded larger on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@
 html {
     font-size: 62.5%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+    overflow-x: hidden;
 }
 
 html, body {
